k8s/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kargo-kursor
spec:
  selector:
    app: kargo-kursor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
